feat: Add warm UI design, email notifications, project cards, and tests

--- a/requirements.txt
+++ b/requirements.txt
@@ -96,3 +96,9 @@ pypdf==5.1.0
 python-multipart==0.0.12
 email-validator==2.3.0
 email-validator==2.2.0
+pydantic-settings==2.7.1
+slowapi==0.1.9
+pytest==8.3.5
+pytest-asyncio==0.24.0
+httpx==0.28.1
+resend==2.19.0
