fix: Remove hardcoded Resend API key from .env.example

--- a/.env.example
+++ b/.env.example
@@ -43,5 +43,5 @@ CONTACT_LOG_FILE=contact_messages.log
 # ======================
 # Email Notifications (Resend)
 # ======================
-RESEND_API_KEY=re_gRcdiTM8_7e8d5EqcAkLtMXNgvjZcev6i
-NOTIFICATION_EMAIL=gantumurq@gmail.com
+RESEND_API_KEY=your_resend_api_key_here
+NOTIFICATION_EMAIL=your_email@example.com
