Prepare for deployment: Add Dockerfile, render.yaml, and deployment docs
- Add Dockerfile for containerized deployment
- Add render.yaml for Render.com deployment
- Add DEPLOYMENT.md with detailed hosting instructions
- Update README.md with live demo link and quick start guide
- Add frontend/.env.production for production API URL
- Include data files (JSON knowledge base + FAISS embeddings)
- Update .gitignore to include data files for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@ __pycache__/
 .DS_Store
 .env
 .vscode/
-data/embeddings/*
-data/raw/*
 contact_messages.log
+
+# Keep data files for deployment
+# data/embeddings/*
+# data/raw/*
+
+# Node
+frontend/node_modules/
+frontend/dist/
