--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ pypdf==5.1.0
 python-multipart==0.0.12
 email-validator==2.2.0
 slowapi==0.1.9
+resend==2.19.0
 
 # Testing (dev only, but keeping for CI/CD)
 pytest==8.3.5
