--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,12 @@ contact_messages.log
 # Node
 frontend/node_modules/
 frontend/dist/
+
+# Deployment & Sensitive Configuration (keep locally, don't push)
+DEPLOYMENT.md
+render.yaml
+Dockerfile
+runtime.txt
+.env.example
+frontend/.env.example
+frontend/.env.production
